# autonovel

./: .gitignore  CLAUDE.md  PIPELINE.md  README.md  WORKFLOW.md  evaluate.py  pyproject.toml  voice.md
.beads/: issues.jsonl
.claude/: settings.json
api/: __init__.py  ao3_client.py  mock.py  models.py  queue.py  server.py
briefs/: appetite_remaining_ch01.json  appetite_remaining_ch02.json  appetite_remaining_outline.md  calibration_2_shadowheart.json  calibration_3_karlach.json  first_story.json
feedback/: 82950256_digest.json  __init__.py  daily-log.md  heartbeat_state.py
hooks/: lint-on-write.sh  pre-commit-checks.sh  pre-compact.sh  session-start.sh  task-completed.sh
identity/: __init__.py  fandom_context.md  few_shot_bank.md  handles.json  handles.py  inspirations.md  pen_name.md  schema.py  self.md  soul.md  voice_priors.json
publish_queue/: 001_karlach_forge.html  001_karlach_forge.md  001_karlach_forge_reply_001_theicyqueen.md
reader/: __main__.py  app.py  autonovel-reader.service
refs/: PLAN.md  api-vs-harness.md  fandom-research.md  methodology.md  multi-chapter-concepts.md  pi-dev-gap-audit.md
specs/: api-proxy.md  identity.md  soul-and-muse.md  write-loop.md
tests/: conftest.py  test_ao3_client_ttl.py  test_api_proxy.py  test_handles.py  test_heartbeat_state.py  test_identity.py  test_multi_fandom.py  test_soul_muse.py  test_write_loop.py
write/: __init__.py  __main__.py  api.py  brief.py  config.json  config.py  context.py  evaluate_fanfic.py  experiment.py  loop.py  muse.py  prepare.py  prompts.py  revision.py  state.py
(+55 files in other folders)
