[project]
name = "autonovel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
